   functions'' in addition to path strings. A load function is passed the
   name of the requested template file, and should return a file-like object
   and some metadata. New load functions are supplied for loading from egg
   package data, and loading from different loaders depending on the path
   prefix of the requested filename (ticket #182).


Version 0.4.4
http://svn.edgewall.org/repos/genshi/tags/0.4.4/
(Aug 14, 2007, from branches/stable/0.4.x)

 * Fixed augmented assignment to local variables in Python code blocks.
 * Fixed handling of nested function and class definitions in Python code
   blocks.
 * Includes were not raising `TemplateNotFound` exceptions even when no
   fallback has been specified. That has been corrected.
 * The template loader now raises a `TemplateNotFound` error when a previously
   cached template is removed or renamed, where it previously was passing up
   an `OSError`.
 * The Genshi I18n filter can be configured to only extract messages found in
   `gettext` function calls, ignoring any text nodes and attribute values
   (ticket #138).


Version 0.4.3
http://svn.edgewall.org/repos/genshi/tags/0.4.3/
(Jul 17 2007, from branches/stable/0.4.x)

 * The I18n filter no longer extracts or translates literal strings in
   attribute values that also contain expressions.
 * Added `loader_callback` option to plugin interface, which allows specifying
   a callback function that the template loader should invoke whenever a new
   template is loaded (ticket #130). Note that the value for this option can
   not be specified as a string, only as an actual function object, which means
   it is not available for use through configuration files.
 * The I18n filter now extracts messages from gettext functions even inside
   ignored tags (ticket #132).
 * The HTML sanitizer now strips any CSS comments in style attributes, which
   could previously be used to hide malicious property values.